<resources>
  <string name="app_name">Amrutha Life</string>
  <string name="network_error">Network Error</string>
  <string name="server_error">Server Error</string>
  <string name="network_error_message">Sorry - something did not go through! Please check your
        network connection and try again.
    </string>
  <string name="sample_task">
        sample task sample task sample task sample task sample task sample task sample task sample task sample task

    </string>
  <string name="title_section1">Favourites</string>
  <string name="title_section2">Chats</string>
  <string name="title_section3">Contacts</string>
  <string name="hello_world">Hello world!</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="press_back_again">Press Back again to exit</string>
  <string name="action_settings">Settings</string>
  <string name="action_profile">Profile</string>
  <string name="profileimage">Profile</string>
  <string name="description">Toggle</string>
  <string name="customers">Customers</string>
  <string name="feedback">Feed Back</string>
  <string name="home">Home</string>
  <string name="messages">Messages</string>
  <string name="orders">Orders</string>
  <string name="order_details">Order Details</string>
  <string name="products">Products</string>
  <string name="reports">Reports</string>
  <string name="routes">Routes</string>
  <string name="tasks">Tasks</string>
  <string name="profile">Profile</string>
  <string name="title_activity_login">Sign in</string>
  <string name="logout">Logout</string>
  <string name="user_name">User Name</string>
  <string name="password">Password</string>
  <string name="profile_name">Profile Name</string>
  <string name="action_sign_in">Sign in</string>
  <string name="error_invalid_user_name">This User name is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
  <string name="pending_tasks">Pending Tasks</string>
  <string name="todays_calls">Todays Visits</string>
  <string name="todays_tasks">Todays Tasks</string>
  <string name="new_leads">New Leads</string>
  <string name="call">Visits</string>
  <string name="call_details">Visit Details</string>
  <string name="prescibing_products">Product Discussed</string>
  <string name="next_visit_date">Next Visit Date</string>
  <string name="samples_given">Sample Given</string>
  <string name="amount_of_order_booked">Order Received</string>
  <string name="order_received">Order Received</string>
  <string name="stock_availability">Stock Availability</string>
  <string name="complaints">Complaints</string>
  <string name="information_conveyed">Information Conveyed</string>
  <string name="payment_received">Payment Received</string>
  <string name="remarks">Remarks</string>
  <string name="collection">Collection</string>
  <string name="mark_visited">Mark As Visited</string>
  <string name="submit">Submit</string>
  <string name="update">Update</string>
  <string name="name">Name</string>
  <string name="phone">Phone</string>
  <string name="address">Address</string>
  <string name="details">Details</string>
  <string name="place">Place</string>
  <string name="userLocation">Location</string>
  <string name="reset_password">Reset Password</string>
  <string name="role">Role</string>
  <string name="enter_town_visited">Please Enter Town Visited</string>
  <string name="enter_date">Please Enter Date</string>
  <string name="updated1">Data Updated Successfully</string>
  <string name="inserted">Data Inserted Successfully</string>
  <string name="samples">Samples</string>
  <string name="expense">Expenses</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="created_by">Created By:</string>
  <string name="by">by:</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="enter_your_password">Enter Your Password</string>
  <string name="enter_new_password">Enter New Password</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="change_password">Change Password</string>
  <string name="town_visited">Town visited</string>
  <string name="date">Date : </string>
  <string name="pick_date">Pick Date</string>
  <string name="da">DA</string>
  <string name="bus_fare">Bus Fare</string>
  <string name="km">Kilometer</string>
  <string name="bike_amount">Bike Expense</string>
  <string name="ta">TA</string>
  <string name="lodge">Lodge</string>
  <string name="courier">Courier</string>
  <string name="sundries">Sundries</string>
  <string name="total">Total</string>
  <string name="select_route">Select Route</string>
  <string name="max_km_exceed">The Value exceeds the allowed Limit</string>
  <string name="search_product">Search Products</string>
  <string name="search_customer">Search Customer</string>
  <string name="no_items">No.of items</string>
  <string name="items">Items</string>
  <string name="gross_amount">Gross Amount</string>
  <string name="not_send">Not Send</string>
  <string name="add_items">Add Items</string>
  <string name="save">Save</string>
  <string name="draft">Draft</string>
  <string name="send">Send</string>
  <string name="select_customer">Select Customer</string>
  <string name="select_products">Select Products</string>
  <string name="create_order">Create Order</string>
  <string name="done">Done</string>
  <string name="quantity">Qty:</string>
  <string name="price">Price:</string>
  <string name="amount">Amount:</string>
  <string name="order_no">Order No:</string>
  <string name="ok">Ok</string>
  <string name="drafts">Drafts</string>
  <string name="empty_call">No Visits to Show</string>
  <string name="empty_customer">No Customers to Show</string>
  <string name="empty_task">No Tasks to Show</string>
  <string name="empty_route">No Routes to Show</string>
  <string name="empty_product">No Products to Show</string>
  <string name="empty_order">No Orders to Show, Click PLUS icon to create a new Order</string>
  <string name="empty_expense">No expenses to Show, Click PLUS icon to create a new Expense
        submission
    </string>
  <string name="empty_message">No Messages to Show</string>
  <string name="empty_order_item">No Items to Show, Click ADD ITEMS</string>
  <string name="empty_lead">No Leads to Show, Click PLUS icon to create a new one</string>
  <string name="GPSAlertDialogTitle">GPG ALERT TITLE</string>
  <string name="GPSAlertDialogMessage">GPS ALERT MESSAGE</string>
  <string name="cancel">cancel</string>
  <string name="message_content">Message context</string>
  <string name="replay_content">Replay Content</string>
  <string name="hello_friends">Hello friends</string>
  <string name="chat">chat</string>
  <string name="current_outstanding">Outstanding</string>
  <string name="invoice">Invoices</string>
  <string name="despatch_details">Despatch Details</string>
  <string name="customer_details">Customer Details</string>
  <string name="despatch">Despatch</string>
  <string name="empty_despatch">No despatches to show</string>
  <string name="lrno">LR No. : </string>
  <string name="despatches">Despatches</string>
  <string name="invoice_no">Invoice No :</string>
  <string name="lr_date">LR Date :</string>
  <string name="transport_details">Transport Details</string>
  <string name="no_of_boxes">No of Boxes</string>
  <string name="supply_status">Supply Status</string>
  <string name="lrno_date">LR No / Date</string>
  <string name="no_cancelled_items">No Cancelled Items</string>
  <string name="no_pendings">No Pending Items</string>
  <string name="_0_30"> 0-30 Days </string>
  <string name="_31_60"> 31-60 Days </string>
  <string name="_61_90"> 61-90 Days </string>
  <string name="_91_180"> 91-180 Days </string>
  <string name="_181_365"> 181-365 Days </string>
  <string name="above_365"> Above 365 Days </string>
  <string name="no_invoices">No invoices to show</string>
  <string name="number_of_items">Number of Items :</string>
  <string name="empty_invoices">No invoices to show</string>
  <string name="payment_mode">Payment Mode</string>
  <string name="chq_dd_no">Check/DD Number</string>
  <string name="data_updated">Data Updated Successfully</string>
  <string name="data_inserted">Data Inserted Successfully</string>
  <string name="collection_details">Collection Details</string>
  <string name="collection_empty">No Collections to show</string>
  <string name="value">Value :</string>
  <string name="invoice_details">Invoice Details</string>
  <string name="message_hint">Type a message...</string>
  <string name="profile_other">Profile other</string>
  <string name="profile_me">Profile me</string>
  <string name="comment">Comment</string>
  <string name="comments">Comments</string>
  <string name="view_comments">View comments</string>
  <string name="comment_count">Comment count</string>
  <string name="submit_before_comments">"Submit details before viewing comments "</string>
  <string name="add_customer_details">Add customer detals</string>
  <string name="type_message">Type message</string>
  <string name="empty_space_not_allowed">Empty spaces are not allowed</string>
  <string name="logo">Logo</string>
  <string name="sending_success">Sending success</string>
  <string name="enter_quantity">Enter Quantity</string>
  <string name="pls_enter_valid_qty">Please enter a valid quantity</string>
  <string name="do_you_remove">Do you really want to remove item?</string>
  <string name="confirm">Confirm</string>
  <string name="item_removed">Item removed</string>
  <string name="not_synced">Not Synced</string>
  <string name="synced">Synced</string>
  <string name="saved">Saved</string>
  <string name="enter_qty">Enter Quantity</string>
  <string name="enter_message">Enter Message</string>
  <string name="replay">Replay</string>
  <string name="updrade_database">Upgrading database from version</string>
  <string name="approximate_turn_over">Approximate turnover</string>
  <string name="competitor_brands">Competitor brands</string>
  <string name="no_of_employees">No. of employees</string>
  <string name="capture">Capture</string>
  <string name="show_image">Show image</string>
  <string name="settings_id_title">Device identifier</string>
  <string name="settings_url_title">Server URL</string>
  <string name="settings_url_summary">Tracking server URL</string>
  <string name="settings_interval_title">Frequency</string>
  <string name="settings_interval_summary">Reporting interval in seconds</string>
  <string name="settings_distance_title">Distance</string>
  <string name="settings_distance_summary">Reporting distance in meters</string>
  <string name="settings_angle_title">Angle</string>
  <string name="settings_angle_summary">Reporting angle in degrees</string>
  <string name="settings_status_title">Service status</string>
  <string name="settings_status_off">Start</string>
  <string name="settings_status_on">Stop</string>
  <string name="settings_status_off_summary">Service stopped</string>
  <string name="settings_status_on_summary">Service running</string>
  <string name="settings_provider_title">Location provider</string>
  <string name="settings_provider_summary">Source of location data</string>
  <string name="sample_date">Date : 2017-01-05</string>
  <string name="doctor">Doctor</string>
  <string name="city">city</string>
  <string name="status">status</string>
  <string name="route_customer_more_option">Menu for more options</string>
  <string name="pinLocation">Pin location</string>
  <string name="additional_details">Additional details</string>
</resources>