<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  android:key="preferenceScreen">

  <SwitchPreference
    android:defaultValue="true"
    android:key="status"
    android:summaryOff="@string/settings_status_off_summary"
    android:summaryOn="@string/settings_status_on_summary"
    android:switchTextOff="@string/settings_status_off"
    android:switchTextOn="@string/settings_status_on"
    android:title="@string/settings_status_title"
    android:visibility="gone" />

  <EditTextPreference
    android:visibility="gone"
    android:key="id"
    android:title="@string/settings_id_title" />

  <EditTextPreference
    android:visibility="gone"
    android:defaultValue="@string/settings_url_default_value"
    android:key="url"
    android:summary="@string/settings_url_summary"
    android:title="@string/settings_url_title" />

  <EditTextPreference
    android:visibility="gone"
    android:defaultValue="1"
    android:key="interval"
    android:numeric="integer"
    android:summary="@string/settings_interval_summary"
    android:title="@string/settings_interval_title" />

  <EditTextPreference
    android:visibility="gone"
    android:defaultValue="0"
    android:key="distance"
    android:numeric="integer"
    android:summary="@string/settings_distance_summary"
    android:title="@string/settings_distance_title" />

  <EditTextPreference
    android:visibility="gone"
    android:defaultValue="0"
    android:key="angle"
    android:numeric="integer"
    android:summary="@string/settings_angle_summary"
    android:title="@string/settings_angle_title" />

  <ListPreference
    android:visibility="gone"
    android:defaultValue="gps"
    android:entries="@array/settings_provider_names"
    android:entryValues="@array/settings_provider_values"
    android:key="provider"
    android:summary="@string/settings_provider_summary"
    android:title="@string/settings_provider_title" />

</PreferenceScreen>
