<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/route_customer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/vertical_spacing">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgProfile"
        android:layout_width="@dimen/profile_image_size_small"
        android:layout_height="@dimen/profile_image_size_small"
        android:layout_marginTop="@dimen/vertical_spacing"

        android:src="@mipmap/ic_call" />

    <TextView
        android:id="@+id/txtCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_toEndOf="@id/imgProfile"
        android:layout_toLeftOf="@+id/txtStatus"
        android:layout_toRightOf="@id/imgProfile"
        android:layout_toStartOf="@+id/txtStatus"
        android:gravity="left"
        android:maxLines="2"
        android:minLines="1"
        android:text="@string/name"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_size" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCustomerName"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_toEndOf="@id/imgProfile"
        android:layout_toRightOf="@id/imgProfile"
        android:text="@string/sample_date"
        android:textSize="@dimen/font_size_small" />

    <TextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDate"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_toEndOf="@id/imgProfile"
        android:layout_toRightOf="@id/imgProfile"
        android:text="@string/doctor"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_size_small"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtType"
        android:layout_gravity="top"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_toEndOf="@id/imgProfile"
        android:layout_toRightOf="@id/imgProfile"
        android:text="@string/place"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_size" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPlace"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_toEndOf="@id/imgProfile"
        android:layout_toRightOf="@id/imgProfile"
        android:text="@string/address"
        android:textSize="@dimen/font_size_small" />

    <TextView
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAddress"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_toEndOf="@id/imgProfile"
        android:layout_toRightOf="@id/imgProfile"
        android:text="@string/city"
        android:textSize="@dimen/font_size_small" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAddress"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_toEndOf="@id/txtCity"

        android:layout_toRightOf="@id/txtCity"
        android:text="@string/phone"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_size_small" />

    <ImageButton
        android:id="@+id/btnMoreOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="top"
        android:background="@drawable/ic_more_vert"
        android:gravity="right"
        android:text="@string/status"
        android:textSize="@dimen/font_size_small"
        android:contentDescription="@string/route_customer_more_option" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btnMoreOption"
        android:layout_gravity="top"
        android:gravity="right"
        android:text="@string/status"
        android:textSize="@dimen/font_size_small" />

    <TextView
        android:id="@+id/txtSyncStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtStatus"
        android:textColor="@color/warning"
        android:textSize="@dimen/font_size_extra_small" />

    <TextView
        android:id="@+id/txtCommentCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtSyncStatus"
        android:gravity="bottom"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_size_extra_small"
        android:visibility="visible" />
    


</RelativeLayout>
