<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kraftlabs.crm_new.Fragments.CallFormFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box">

        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/heading"
            android:text="@string/call_details"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="@dimen/font_size" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtHeading">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="vertical"
                android:paddingBottom="@dimen/fab_margin">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtCustomerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/details"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtRemarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/information_conveyed"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btnSubmit"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/horizontal_spacing"
                    android:layout_marginRight="@dimen/horizontal_spacing"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/button"
                    android:text="@string/submit"
                    android:textColor="@color/textColorInverse"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnViewComment"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/horizontal_spacing"
                    android:layout_marginRight="@dimen/horizontal_spacing"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/button"
                    android:text="@string/view_comments"
                    android:textColor="@color/textColorInverse"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>
